# humbot_ws

./: .gitignore  README.md
src/: Readme.md  amcl_slam_notes.md  functionality.md  issues_faced.md
src/humbot_bringup/: CMakeLists.txt  package.xml
src/humbot_bringup/launch/: simulated_robot.launch.py
src/humbot_controller/: CMakeLists.txt  package.xml
src/humbot_controller/config/: humbot_controllers.yaml  joy_teleop.yaml  twist_mux_locks.yaml  twist_mux_topics.yaml
src/humbot_controller/include/humbot_controller/: simple_controller.hpp
src/humbot_controller/launch/: controller.launch.py  joystick_teleop.launch.py
src/humbot_controller/src/: noisy_controller.cpp  simple_controller.cpp  twist_relay.cpp
src/humbot_cpp_examples/: CMakeLists.txt  package.xml
src/humbot_cpp_examples/include/humbot_cpp_examples/: simple_tf_kinematics.hpp  simple_turtlesim_kinematics.hpp
src/humbot_cpp_examples/src/: simple_action_client.cpp  simple_action_server.cpp  simple_lifecycle_node.cpp  simple_parameter.cpp  simple_publisher.cpp  simple_qos_publisher.cpp  simple_qos_subscriber.cpp  simple_service_client.cpp  simple_service_server.cpp  simple_subscriber.cpp  simple_tf_kinematics.cpp  simple_turtlesim_kinematics.cpp
src/humbot_description/: CMakeLists.txt  package.xml
src/humbot_description/launch/: display.launch.py  gazebo.launch.py
src/humbot_description/rviz/: display.rviz
src/humbot_description/urdf/: humbot.urdf.xacro  humbot_gazebo.xacro  humbot_ros2_control.xacro
src/humbot_localization/: CMakeLists.txt  package.xml
src/humbot_localization/config/: amcl copy.yaml  ekf.yaml
src/humbot_localization/include/humbot_localization/: kalman_filter.hpp  odometry_motion_model.hpp
src/humbot_localization/launch/: global_localization.launch.py  local_localization.launch.py
src/humbot_localization/rviz/: global_localization.rviz
src/humbot_localization/src/: imu_republisher.cpp  kalman_filter.cpp  odometry_motion_model.cpp
src/humbot_mapping/: CMakeLists.txt  package.xml
src/humbot_mapping/config/: slam_toolbox.yaml
src/humbot_mapping/include/humbot_mapping/: mapping_with_known_poses.hpp
src/humbot_mapping/launch/: slam.launch.py
src/humbot_mapping/rviz/: slam.rviz
src/humbot_mapping/src/: mapping_with_known_poses.cpp
src/humbot_motion/: CMakeLists.txt  motion_planner_plugins.xml  package.xml
src/humbot_motion/include/humbot_motion/: pd_motion_planner.hpp  pd_motion_planner_algo.hpp  pure_pursuit.hpp  pure_pursuit_algo.hpp
src/humbot_motion/src/: pd_motion_planner.cpp  pd_motion_planner_algo.cpp  pure_pursuit.cpp  pure_pursuit_algo.cpp
src/humbot_msgs/: CMakeLists.txt  package.xml
src/humbot_msgs/srv/: GetTransform.srv
src/humbot_navigation/: CMakeLists.txt  package.xml
src/humbot_navigation/behavior_tree/: simple_navigation_with_replanning_recovery.xml
src/humbot_navigation/config/: behavior_server.yaml  bt_navigator.yaml  controller_server.yaml  costmap.yaml  planner_server.yaml  smoother_server.yaml
src/humbot_navigation/launch/: navigation.launch.py
src/humbot_planning/: CMakeLists.txt  global_planner_plugins.xml  package.xml
src/humbot_planning/include/humbot_planning/: a_star_planner.hpp  a_star_planner_algo.hpp  dijkstra_planner.hpp  dijkstra_planner_algo.hpp
src/humbot_planning/src/: a_star_planner.cpp  a_star_planner_algo.cpp  dijkstra_planner.cpp  dijkstra_planner_algo.cpp
src/humbot_utils/: CMakeLists.txt  package.xml
src/humbot_utils/src/: safety_stop.cpp
